   - rev_cord_list_to_list/1 (similar to cord_list_to_list/1)
   - cons/3
   - snoc/3
   - find_first_match/3

* The following functions and predicates have been added to the array module:

   - det_least_index/1
   - semidet_least_index/1
   - det_greatest_index/1
   - semidet_greatest_index/1
   - foldl_corresponding/5
   - foldl2_corresponding/7

   The following functions in the array module have been deprecated:

   - least_index/1
   - greatest_index/1

* The following function has been added to the array2d module:

   - is_empty/1

* The following predicates have been added to the time module:

   - localtime/4
   - mktime/4

  The following functions in the time module have been deprecated:

   - localtime/1
   - mktime/1
   - ctime/1

* The following predicates have been added to the rbtree module:

   - foldl_values/4
   - foldl2_values/6

* The following predicates have been added to the hash_table module:

   - fold2/6
   - fold3/8

* We have added the predicate svremove/4 to the assoc_list module.
  This like the remove/4 predicate but with its arguments are in
  an order more conducive to the use of state variable notation.

* We have made several changes to the pretty_printer module:

  - The type formatter_limit has been renamed to func_symbol_limit,
    since this better reflects the type's purpose.
  - We have replaced the set_formatter function with a predicate
    of the same name, since this allows the use of state variable notation
    when setting up more than one type-specific formatter,
  - We have renamed the write_doc_to_stream predicate as put_doc,
    to better fit in with the names other predicates that operate on
    values of the stream.writer typeclass, and changed its interface
    to group the prettyprinter parameters together in a value of the type
    that was designed for this purpose.

* We have deprecated the following functions from the std_util module:

  - maybe_pred/3
  - maybe_func/2
